--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "advanced-task-manage-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ts-dev": "ts-node-dev ./server/server.ts",
+    "ts-compile": "tsc",
+    "dev": "nodemon ./lib/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,25 @@
   "bugs": {
     "url": "https://github.com/Hosseinrezaeifard/advanced-task-manager-API/issues"
   },
-  "homepage": "https://github.com/Hosseinrezaeifard/advanced-task-manager-API#readme"
+  "homepage": "https://github.com/Hosseinrezaeifard/advanced-task-manager-API#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
+    "@types/node": "^20.7.0",
+    "@types/pg": "^8.10.3",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
+    "nodemon": "^3.0.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
+  }
 }
